--- a/index.html
+++ b/index.html
@@ -255,23 +255,26 @@
                 </div>
                 <div class="portfolio-category__images">
                     <a class="glightbox" href="./images/portfolio/crm-cms/r-e.jpg">
-                        <img src="./images/portfolio/crm-cms/webp/r-e.webp" alt="CRM and CMS" width="300" height="200">
+                        <img class="lazyload" data-src="./images/portfolio/crm-cms/webp/r-e.webp" alt="CRM and CMS"
+                            width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/c-r-e.jpg">
-                        <img src="./images/portfolio/crm-cms/webp/c-r-e.webp" alt="CRM and CMS" width="300"
-                            height="200">
+                        <img class="lazyload" data-src="./images/portfolio/crm-cms/webp/c-r-e.webp" alt="CRM and CMS"
+                            width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/connections-inc.jpg">
-                        <img src="./images/portfolio/crm-cms/webp/connections-inc.webp" alt="CRM and CMS" width="300"
-                            height="200">
+                        <img class="lazyload" data-src="./images/portfolio/crm-cms/webp/connections-inc.webp"
+                            alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/new-ca.jpg">
-                        <img style="display:none" src="./images/portfolio/webp/crm-cms/webp/new-ca.webp"
-                            alt="CRM and CMS" width="300" height="200">
+                        <img class="lazyload" style="display:none"
+                            data-src="./images/portfolio/webp/crm-cms/webp/new-ca.webp" alt="CRM and CMS" width="300"
+                            height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/deal-manager.jpg">
-                        <img style="display:none" src="./images/portfolio/crm-cms/webp/deal-manager.webp"
-                            alt="CRM and CMS" width="300" height="200">
+                        <img class="lazyload" style="display:none"
+                            data-src="./images/portfolio/crm-cms/webp/deal-manager.webp" alt="CRM and CMS" width="300"
+                            height="200">
                     </a>
                 </div>
             </div>
@@ -291,27 +294,30 @@
                 </div>
                 <div class="portfolio-category__images">
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-1.webp">
-                        <img src="./images/portfolio/graphics/webp/hot-spot-1.webp" alt="Social Media sample posts"
-                            width="300" height="200">
+                        <img class="lazyload" data-src="./images/portfolio/graphics/webp/hot-spot-1.webp"
+                            alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-2.webp">
-                        <img src="./images/portfolio/graphics/webp/tuesday-tip-2.webp" alt="Social Media sample posts"
-                            width="300" height="200">
+                        <img class="lazyload" data-src="./images/portfolio/graphics/webp/tuesday-tip-2.webp"
+                            alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-2.webp">
-                        <img src="./images/portfolio/graphics/webp/hot-spot-2.webp" alt="Social Media sample posts"
-                            width="300" height="200">
+                        <img class="lazyload" data-src="./images/portfolio/graphics/webp/hot-spot-2.webp"
+                            alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-1.webp">
-                        <img style="display:none" src="./images/portfolio/graphics/webp/tuesday-tip-1.webp"
+                        <img class="lazyload" style="display:none"
+                            data-src="./images/portfolio/graphics/webp/tuesday-tip-1.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-3.webp">
-                        <img style="display:none" src="./images/portfolio/webp/graphics/hot-spot-3.webp"
-                            alt="Social Media sample posts" width="300" height="200">
+                        <img class="lazyload" style="display:none"
+                            data-src="./images/portfolio/webp/graphics/hot-spot-3.webp" alt="Social Media sample posts"
+                            width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-3.webp">
-                        <img style="display:none" src="./images/portfolio/graphics/webp/tuesday-tip-3.webp"
+                        <img class="lazyload" style="display:none"
+                            data-src="./images/portfolio/graphics/webp/tuesday-tip-3.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                 </div>
