--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="service-image">
-                        <img src="./images/process-optimization.svg" alt="Analytics process" width="320" height="auto">
+                        <img src="./images/process-optimization.svg" alt="Analytics process" width="320" height="320">
                     </div>
                 </li>
                 <li class="service">
@@ -111,7 +111,7 @@
                     </div>
                     <div class="service-image">
                         <img src="./images/web-development-and-seo.svg" alt="Website Development and SEO" width="320"
-                            height="auto">
+                            height="320">
                     </div>
                 </li>
                 <li class="service">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="service-image">
-                        <img src="./images/team-work.svg" alt="Team Work" width="320" height="auto">
+                        <img src="./images/team-work.svg" alt="Team Work" width="320" height="320">
                     </div>
                 </li>
                 <li class="service">
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="service-image">
-                        <img src="./images/social-media.svg" alt="Social Media" width="320" height="auto">
+                        <img src="./images/social-media.svg" alt="Social Media" width="320" height="320">
                     </div>
                 </li>
             </ul>
@@ -172,12 +172,12 @@
                 <div class="testimonials">
                     <p><span class="text-emphasis">Client satisfaction</span> is the key to loyalty! </p>
                     <ul>
-                        <li><img src="./images/testimonials/testimonial-2.jpg" alt="client testimonial" width="702"
-                                height="118"></li>
-                        <li><img src="./images/testimonials/testimonial-1.jpg" alt="client testimonial" width="444"
-                                height="109"></li>
-                        <li><img src="./images/testimonials/testimonial-3.jpg" alt="client testimonial" width="621"
-                                height="112"></li>
+                        <li><img class="lazyload" data-src="./images/testimonials/testimonial-2.jpg"
+                                alt="client testimonial" width="702" height="118"></li>
+                        <li><img class="lazyload" data-src="./images/testimonials/testimonial-1.jpg"
+                                alt="client testimonial" width="444" height="109"></li>
+                        <li><img class="lazyload" data-src="./images/testimonials/testimonial-3.jpg"
+                                alt="client testimonial" width="621" height="112"></li>
                     </ul>
                 </div>
                 <div class="kudos">
@@ -185,26 +185,26 @@
                     <p>We cherish our <span class="text-emphasis">clients' feedback</span> and inspires us to
                         consistently give more value.</p>
                     <ul>
-                        <li><img src="./images/testimonials/kudos-2.jpg" alt="client testimonial" width="563"
-                                height="104">
+                        <li><img class="lazyload" data-src="./images/testimonials/kudos-2.jpg" alt="client testimonial"
+                                width="563" height="104">
                         </li>
-                        <li><img src="./images/testimonials/kudos-1.jpg" alt="client testimonial" width="485"
-                                height="86">
+                        <li><img class="lazyload" data-src="./images/testimonials/kudos-1.jpg" alt="client testimonial"
+                                width="485" height="86">
                         </li>
-                        <li><img src="./images/testimonials/kudos-7.jpg" alt="client testimonial" width="561"
-                                height="100">
+                        <li><img class="lazyload" data-src="./images/testimonials/kudos-7.jpg" alt="client testimonial"
+                                width="561" height="100">
                         </li>
-                        <li><img src="./images/testimonials/kudos-4.jpg" alt="client testimonial" width="430"
-                                height="63">
+                        <li><img class="lazyload" data-src="./images/testimonials/kudos-4.jpg" alt="client testimonial"
+                                width="430" height="63">
                         </li>
-                        <li><img src="./images/testimonials/kudos-6.jpg" alt="client testimonial" width="563"
-                                height="168"></li>
+                        <li><img class="lazyload" data-src="./images/testimonials/kudos-6.jpg" alt="client testimonial"
+                                width="563" height="168"></li>
 
-                        <li><img src="./images/testimonials/kudos-5.jpg" alt="client testimonial" width="730"
-                                height="103">
+                        <li><img class="lazyload" data-src="./images/testimonials/kudos-5.jpg" alt="client testimonial"
+                                width="730" height="103">
                         </li>
-                        <li><img src="./images/testimonials/kudos-3.jpg" alt="client testimonial" width="454"
-                                height="92">
+                        <li><img class="lazyload" data-src="./images/testimonials/kudos-3.jpg" alt="client testimonial"
+                                width="454" height="92">
                         </li>
                     </ul>
                 </div>
@@ -218,18 +218,18 @@
             <p class="mb-sm text-center">We are proud of the current and previous <span class="text-emphasis">companies
                     we've worked with</span>.</p>
             <ul>
-                <li><img src="./images/companies/remax-first.jpg" alt="RE/MAX First Calgary"
+                <li><img class="lazyload" data-src="./images/companies/remax-first.jpg" alt="RE/MAX First Calgary"
                         title="RE/MAX First Calgary" width="143" height="73"></li>
-                <li><img src="./images/companies/mcgrath.jpg" alt="McGrath Australia" title="McGrath Australia"
-                        width="143" height="41.75"></li>
-                <li><img src="./images/companies/iqor.png" alt="iQor Philippines" title="iQor Philippines" width="143"
-                        height="51.08"></li>
-                <li><img src="./images/companies/beepo.png" alt="Beepo Australia" title="Beepo Australia" width="143"
-                        height="45.19"></li>
-                <li><img src="./images/companies/nco-group.jpg" alt="NCO Group ( now Alorica )"
+                <li><img class="lazyload" data-src="./images/companies/mcgrath.jpg" alt="McGrath Australia"
+                        title="McGrath Australia" width="143" height="41.75"></li>
+                <li><img class="lazyload" data-src="./images/companies/iqor.png" alt="iQor Philippines"
+                        title="iQor Philippines" width="143" height="51.08"></li>
+                <li><img class="lazyload" data-src="./images/companies/beepo.png" alt="Beepo Australia"
+                        title="Beepo Australia" width="143" height="45.19"></li>
+                <li><img class="lazyload" data-src="./images/companies/nco-group.jpg" alt="NCO Group ( now Alorica )"
                         title="NCO Group ( now Alorica )" width="143" height="51.38"></li>
-                <li><img src="./images/companies/teletech.jpg.png" alt="Teletech" title="Teletech" width="143"
-                        height="44.13"></li>
+                <li><img class="lazyload" data-src="./images/companies/teletech.jpg.png" alt="Teletech" title="Teletech"
+                        width="143" height="44.13"></li>
             </ul>
         </div>
     </section>
