--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                         </div>
                     </div>
                     <div class="service-image">
-                        <img src="./images/process-optimization.svg" alt="Analytics process" width="320" height="320">
+                        <img class="lazyload" data-src="images/process-optimization.svg" alt="Analytics process"
+                            width="320" height="320">
                     </div>
                 </li>
                 <li class="service">
@@ -110,8 +111,8 @@
                         </div>
                     </div>
                     <div class="service-image">
-                        <img src="./images/web-development-and-seo.svg" alt="Website Development and SEO" width="320"
-                            height="320">
+                        <img class="lazyload" data-src="images/web-development-and-seo.svg"
+                            alt="Website Development and SEO" width="320" height="320">
                     </div>
                 </li>
                 <li class="service">
@@ -125,7 +126,7 @@
                         </div>
                     </div>
                     <div class="service-image">
-                        <img src="./images/team-work.svg" alt="Team Work" width="320" height="320">
+                        <img class="lazyload" data-src="images/team-work.svg" alt="Team Work" width="320" height="320">
                     </div>
                 </li>
                 <li class="service">
@@ -138,7 +139,8 @@
                         </div>
                     </div>
                     <div class="service-image">
-                        <img src="./images/social-media.svg" alt="Social Media" width="320" height="320">
+                        <img class="lazyload" data-src="images/social-media.svg" alt="Social Media" width="320"
+                            height="320">
                     </div>
                 </li>
             </ul>
