defer calendly js

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         <div class="calendly-inline-widget"
             data-url="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
             style="min-width:320px;height:650px;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" defer async></script>
         <!-- Calendly inline widget end -->
     </section>
 
