--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="site-header">
         <nav class="container">
             <div class="logo mobile-menu">
-                <a href="#">
+                <a href="/">
                     <img src="./images/bvd-va-logo.png" alt="BVD VA Logo" width="100" height="75">
                 </a>
                 <div class="mobile-menu__icon" id="toggler">
