--- a/index.html
+++ b/index.html
@@ -376,13 +376,21 @@
                     15-min Discovery
                     Call</span> with
                 us.</p>
+
+
+            <div>
+                <iframe
+                    src="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
+                    frameborder="0" style="width: 100%;height:650px;"></iframe>
+            </div>
         </div>
         <!-- Calendly inline widget begin -->
-        <div class="calendly-inline-widget"
+        <!-- <div class="calendly-inline-widget"
             data-url="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
             style="min-width:320px;height:650px;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" defer></script>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" defer></script> -->
         <!-- Calendly inline widget end -->
+
     </section>
 
     <!-- FOOTER -->
