--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
 
 
             <div>
-                <iframe
+                <iframe id="calendly" title="calendly"
                     src="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
-                    frameborder="0" style="width: 100%;height:650px;"></iframe>
+                    frameborder="0" style="width: 100%;height:650px;;"></iframe>
             </div>
         </div>
         <!-- Calendly inline widget begin -->
