intersection obs complete

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
             <div>
                 <iframe id="calendly" title="calendly"
-                    src="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
+                    data-src="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
                     frameborder="0" style="width: 100%;height:650px;;"></iframe>
             </div>
         </div>
