--- a/index.html
+++ b/index.html
@@ -372,25 +372,17 @@
     <section class="contact section" id="contact">
         <div class="container">
             <h2 class="section-title-white">Contact Us</h2>
-            <p class="text-center text-white">Please use the calendar below to book a <span class="text-emphasis">FREE
+            <p class="text-center text-white mb-md">Please use the calendar below to book a <span
+                    class="text-emphasis">FREE
                     15-min Discovery
                     Call</span> with
                 us.</p>
-
-
             <div>
                 <iframe id="calendly" title="calendly"
                     data-src="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
-                    frameborder="0" style="width: 100%;height:650px;;"></iframe>
+                    frameborder="0"></iframe>
             </div>
         </div>
-        <!-- Calendly inline widget begin -->
-        <!-- <div class="calendly-inline-widget"
-            data-url="https://calendly.com/bvd-virtual-assitants/free-15-min-discovery-call?text_color=0f172a&primary_color=863ed8"
-            style="min-width:320px;height:650px;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" defer></script> -->
-        <!-- Calendly inline widget end -->
-
     </section>
 
     <!-- FOOTER -->
