added screen reader text

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <meta name="description"
         content="Virtual Assistant Services - Website Development and SEO, CRM, CMS, & Admin Tasks, Social Media Graphics & Video, Process Optimization / Automation">
     <title>BVD VA's</title>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Roboto:wght@300;400;700&display=swap"
-        rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
@@ -257,23 +252,29 @@
                 </div>
                 <div class="portfolio-category__images">
                     <a class="glightbox" href="./images/portfolio/crm-cms/r-e.jpg">
+                        <span class="screen-reader-only">CRM
+                            and CMS</span>
                         <img class="lazyload" data-src="./images/portfolio/crm-cms/webp/r-e.webp" alt="CRM and CMS"
                             width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/c-r-e.jpg">
+                        <span class="screen-reader-only">CRM and CMS</span>
                         <img class="lazyload" data-src="./images/portfolio/crm-cms/webp/c-r-e.webp" alt="CRM and CMS"
                             width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/connections-inc.jpg">
+                        <span class="screen-reader-only">CRM and CMS</span>
                         <img class="lazyload" data-src="./images/portfolio/crm-cms/webp/connections-inc.webp"
                             alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/new-ca.jpg">
+                        <span class="screen-reader-only">CRM and CMS</span>
                         <img class="lazyload" style="display:none"
                             data-src="./images/portfolio/webp/crm-cms/webp/new-ca.webp" alt="CRM and CMS" width="300"
                             height="200">
                     </a>
                     <a class="glightbox" href="./images/portfolio/crm-cms/deal-manager.jpg">
+                        <span class="screen-reader-only">CRM and CMS</span>
                         <img class="lazyload" style="display:none"
                             data-src="./images/portfolio/crm-cms/webp/deal-manager.webp" alt="CRM and CMS" width="300"
                             height="200">
