--- a/index.html
+++ b/index.html
@@ -297,28 +297,34 @@
                 </div>
                 <div class="portfolio-category__images">
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-1.webp">
+                        <span class="screen-reader-only">Social Media sample posts</span>
                         <img class="lazyload" data-src="./images/portfolio/graphics/webp/hot-spot-1.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-2.webp">
+                        <span class="screen-reader-only">Social Media sample posts</span>
                         <img class="lazyload" data-src="./images/portfolio/graphics/webp/tuesday-tip-2.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-2.webp">
+                        <span class="screen-reader-only">Social Media sample posts</span>
                         <img class="lazyload" data-src="./images/portfolio/graphics/webp/hot-spot-2.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-1.webp">
+                        <span class="screen-reader-only">Social Media sample posts</span>
                         <img class="lazyload" style="display:none"
                             data-src="./images/portfolio/graphics/webp/tuesday-tip-1.webp"
                             alt="Social Media sample posts" width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/hot-spot-3.webp">
+                        <span class="screen-reader-only">Social Media sample posts</span>
                         <img class="lazyload" style="display:none"
                             data-src="./images/portfolio/webp/graphics/hot-spot-3.webp" alt="Social Media sample posts"
                             width="300" height="200">
                     </a>
                     <a class="glightboxGV" href="./images/portfolio/graphics/webp/tuesday-tip-3.webp">
+                        <span class="screen-reader-only">Social Media sample posts</span>
                         <img class="lazyload" style="display:none"
                             data-src="./images/portfolio/graphics/webp/tuesday-tip-3.webp"
                             alt="Social Media sample posts" width="300" height="200">
@@ -343,23 +349,28 @@
                 </div>
                 <div class="portfolio-category__images">
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-3.jpg">
+                        <span class="screen-reader-only">Web and SEO</span>
                         <img class="lazyload" data-src="images/portfolio/web-seo/web-design-and-dev-thumb-3.jpg"
                             alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-5.jpeg">
+                        <span class="screen-reader-only">Web and SEO</span>
                         <img class="lazyload" data-src="images/portfolio/web-seo/web-design-and-dev-thumb-5.jpg"
                             alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-4.jpg">
+                        <span class="screen-reader-only">Web and SEO</span>
                         <img class="lazyload" data-src="images/portfolio/web-seo/web-design-and-dev-thumb-4.jpg"
                             alt="CRM and CMS" width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-1.jpeg">
+                        <span class="screen-reader-only">Web and SEO</span>
                         <img class="lazyload" style="display:none"
                             data-src="images/portfolio/web-seo/web-design-and-dev-thumb-1.jpg" alt="CRM and CMS"
                             width="300" height="200">
                     </a>
                     <a class="glightboxWeb" href="./images/portfolio/web-seo/web-design-and-dev-2.jpeg">
+                        <span class="screen-reader-only">Web and SEO</span>
                         <img class="lazyload" style="display:none"
                             data-src="images/portfolio/web-seo/web-design-and-dev-thumb-2.jpg" alt="CRM and CMS"
                             width="300" height="200">
